<resources>
    <string name="app_name">Food Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="food">Food</string>

    <!--<string-array name="navigation_item">-->
    <!--<string name="profile">Profile</string>-->
    <!--<string name="order">Order</string>-->
    <!--<string name="feed">Feed</string>-->
    <!--</string-array>-->
    <string-array name="navigation_items">
        <item>Profile</item>
        <item>Time</item>
        <item>Food</item>
    </string-array>




    <string name="loginLblDetail">Enter your login credentials to get access:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dontHave">Dont\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="signupLblDetail">Hey there! You can start by creating a new account</string>
    <string name="emailAddress">Email Address</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="doYouHave">Do you have an account?</string>

    <string name="ShortDescription">RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="order">Order</string>


</resources>
