<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonColor">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/mainLayoutLeftPadding"
        android:paddingRight="@dimen/mainLayoutRightPadding">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/resturantImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/imageFingerTopMargin"
            android:clickable="true"
            android:src="@drawable/ic_camera"
            app:civ_border_color="#00000000"
            app:civ_border_width="2dp" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtShortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/signupTextLblDetailPadding"
            android:text="@string/ShortDescription"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/editTextSize" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTxtTopMargin"
            android:theme="@style/SignupHintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Restaurant Name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/editTextSize" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTxtTopMargin"
            android:theme="@style/SignupHintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/editTextSize" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgNext"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_next"
            />


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtDontHave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doYouHave"
                android:textColor="@color/hintColor"
                android:textSize="@dimen/editTextSize" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/txtSpace"
                android:text="@string/login"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/editTextSize" />
        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
